// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:accent-bar 1`] = `
"<section class="container-tip container-tip--accent-bar" style="background-color:#eef6ef;padding:12px 16px;border-radius:16px 4px 16px 4px;box-shadow:0 2px 6px rgba(0,0,0,0.04);margin:16px 0">
<section class="container-tip__title" style="font-size:14px;font-weight:700;color:#1f8a4c;margin-bottom:6px;letter-spacing:0.3px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#1f8a4c" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#1f8a4c"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#1f8a4c"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:bubble-organic 1`] = `
"<section class="container-tip container-tip--bubble-organic" style="background-color:#eef6ef;padding:16px 18px;margin:20px 0;border-radius:18px;box-shadow:inset 4px 0 0 #1f8a4c, 0 4px 14px rgba(0,0,0,0.05)">
<section class="container-tip__title" style="font-size:15px;font-weight:700;color:#1f8a4c;margin-bottom:8px;letter-spacing:0.4px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#1f8a4c" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#1f8a4c"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#1f8a4c"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:card-shadow 1`] = `
"<section class="container-tip container-tip--card-shadow" style="background-color:#fdfdfc;border-top:2px solid #1f8a4c;padding:16px;margin:18px 0;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,0.06)">
<section class="container-tip__title" style="font-weight:700;color:#1f8a4c;margin-bottom:8px;font-size:15px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#1f8a4c" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#1f8a4c"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#1f8a4c"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:dashed-border 1`] = `
"<section class="container-tip container-tip--dashed-border" style="background-color:#eef6ef;border-left:2px dashed #1f8a4c;padding:12px 16px;border-radius:0 4px 4px 0;margin:16px 0">
<section class="container-tip__title" style="font-size:14px;font-weight:600;color:#1f8a4c;margin-bottom:6px;letter-spacing:1px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#1f8a4c" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#1f8a4c"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#1f8a4c"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:double-border 1`] = `
"<section class="container-tip container-tip--double-border" style="border-left:4px double #1f8a4c;padding:12px 16px;margin:16px 0">
<section class="container-tip__title" style="font-size:14px;font-weight:600;color:#1f8a4c;margin-bottom:6px;letter-spacing:1px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#1f8a4c" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#1f8a4c"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#1f8a4c"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:ledger-cell 1`] = `
"<section class="container-tip container-tip--ledger-cell" style="background-color:#eef6ef;border:1px solid #1f8a4c;padding:0;margin:20px 0;border-radius:0">
<section style="background-color:#1f8a4c;color:#fefefe;padding:6px 16px;font-size:12px;font-weight:700;letter-spacing:2px;text-transform:uppercase;line-height:1.4">要点 · KEY<span style="margin-left:10px;letter-spacing:0.4px;text-transform:none;font-weight:600;opacity:0.92">· 测试标题</span></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:magazine-pull 1`] = `
"<section class="container-tip container-tip--magazine-pull" style="background-color:transparent;border-top:1px solid #1f8a4c;border-bottom:1px solid #1f8a4c;padding:0 0 14px;margin:24px 0;border-radius:0">
<section style="text-align:left"><span style="display:inline-block;margin-top:-9px;margin-left:16px;padding:0 10px;background-color:#fdfdfc;color:#1f8a4c;font-size:12px;font-weight:700;letter-spacing:3px;text-transform:uppercase;line-height:1.5">测试标题</span></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:manpage-log 1`] = `
"<section class="container-tip container-tip--manpage-log" style="background-color:#eef6ef;border-top:1px solid #1f8a4c;border-bottom:1px solid #1f8a4c;padding:0;margin:20px 0;border-radius:0;box-shadow:inset -14px 0 10px -10px rgba(0,0,0,0.35)">
<section style="background-color:#fdfdfc;padding:6px 16px;color:#1f8a4c;font-size:13px;font-weight:600;letter-spacing:2px;border-bottom:1px solid #d8d8d4">:: NOTE ::<span style="color:#636870;font-weight:500;letter-spacing:0.6px;margin-left:10px;text-transform:none">测试标题</span></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:marginalia 1`] = `
"<section class="container-tip container-tip--marginalia" style="background-color:transparent;padding:4px 0 4px 28px;margin:16px 0;border:none;border-radius:0">
<section style="color:#8a8f98;font-size:15px;line-height:1.7;margin-bottom:4px;letter-spacing:1px;font-weight:600">【按】<span style="color:#636870;font-weight:500;letter-spacing:0.6px;margin-left:6px">测试标题</span></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:minimal-underline 1`] = `
"<section class="container-tip container-tip--minimal-underline" style="padding:4px 0 4px 12px;margin:14px 0;border-left:2px solid #1f8a4c">
<section class="container-tip__title" style="display:inline-block;font-size:14px;color:#1f8a4c;font-weight:700;padding-bottom:2px;border-bottom:1px solid #1f8a4c;margin-bottom:8px;letter-spacing:0.5px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#1f8a4c" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#1f8a4c"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#1f8a4c"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:mook-tag 1`] = `
"<section class="container-tip container-tip--mook-tag" style="display:table;width:100%;table-layout:auto;background-color:#eef6ef;border-left:2px solid #1f8a4c;padding:10px 12px;margin:0 0 8px 0;border-radius:0">
<span style="display:table-cell;vertical-align:top;width:24px;font-weight:700;color:#1f8a4c;font-size:12px;line-height:1.75">参</span>
<section class="container-tip__body" style="display:table-cell;vertical-align:top;font-size:12px;line-height:1.75;color:#1c1f24">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">第一行正文。
第二行正文，含 <mark style="background-color: #fff4c8; color: #1c1f24; padding: 0 3px; border-radius: 2px;">高亮</mark> 与 <code style="background-color: #eceae4; color: #1c1f24; padding: 2px 6px; border-radius: 3px; font-size: 14px; word-break: break-all;">code</code>。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:news-row 1`] = `
"<section class="container-tip container-tip--news-row" style="display:table;width:100%;table-layout:auto;border-left:3px solid #1f8a4c;margin:0 0 4px 0;border-radius:0">
<span style="display:table-cell;vertical-align:middle;min-width:54px;background-color:#1f8a4c;color:#fefefe;padding:2px 10px;font-size:10px;line-height:1.4;font-weight:700;letter-spacing:0.1em;text-align:center;white-space:nowrap">测试标题</span>
<section class="container-tip__body" style="display:table-cell;vertical-align:middle;padding:2px 12px;font-size:12px;line-height:1.65;color:#1c1f24">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">第一行正文。
第二行正文，含 <mark style="background-color: #fff4c8; color: #1c1f24; padding: 0 3px; border-radius: 2px;">高亮</mark> 与 <code style="background-color: #eceae4; color: #1c1f24; padding: 2px 6px; border-radius: 3px; font-size: 14px; word-break: break-all;">code</code>。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:news-underline 1`] = `
"<section class="container-tip container-tip--news-underline" style="display:table;width:100%;table-layout:auto;border-bottom:1px solid #1c1f24;margin:0;border-radius:0">
<span style="display:table-cell;vertical-align:middle;background-color:#1f8a4c;color:#fefefe;padding:4px 8px;font-size:9px;line-height:1.4;font-weight:700;letter-spacing:0.15em;text-align:center;white-space:nowrap">测试标题</span>
<section class="container-tip__body" style="display:table-cell;vertical-align:middle;padding:4px 10px;font-size:12px;line-height:1.45;color:#1c1f24;border-left:1px solid #1c1f24">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">第一行正文。
第二行正文，含 <mark style="background-color: #fff4c8; color: #1c1f24; padding: 0 3px; border-radius: 2px;">高亮</mark> 与 <code style="background-color: #eceae4; color: #1c1f24; padding: 2px 6px; border-radius: 3px; font-size: 14px; word-break: break-all;">code</code>。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:pill-tag 1`] = `
"<section class="container-tip container-tip--pill-tag" style="background-color:#eef6ef;border:1px solid #1f8a4c;padding:24px 16px 16px;border-radius:6px;margin:24px 0 16px">
<section class="container-tip__title" style="display:inline-block;padding:3px 12px;background-color:#1f8a4c;color:#fefefe;border-radius:12px;font-size:13px;font-weight:700;margin-top:-34px;margin-bottom:10px;letter-spacing:0.4px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#1f8a4c" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#1f8a4c"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#1f8a4c"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:report-section 1`] = `
"<section class="container-tip container-tip--report-section" style="background-color:#eef6ef;border-top:3px solid #1f8a4c;border-bottom:1px solid #1f8a4c;padding:0 0 12px;margin:20px 0;border-radius:0">
<section style="padding:10px 16px 0;line-height:1.5"><span style="display:inline-block;background-color:#1f8a4c;color:#fefefe;padding:3px 10px;font-size:12px;font-weight:700;letter-spacing:2px;border-radius:0;line-height:1.4">§ 要点</span><span style="margin-left:10px;color:#1c1f24;font-size:14px;font-weight:600;letter-spacing:0.3px">测试标题</span></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:sidenote-latex 1`] = `
"<section class="container-tip container-tip--sidenote-latex" style="border:1px solid #1f8a4c;padding:0 0 10px;margin:18px 0;border-radius:0;background-color:transparent">
<section style="padding:10px 16px 0;font-size:13px;color:#1f8a4c;letter-spacing:2px;font-weight:700;text-transform:uppercase;line-height:1.6">DEFINITION.<span style="color:#1c1f24;text-transform:none;letter-spacing:0.3px;font-weight:600;margin-left:10px">测试标题</span></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:terminal 1`] = `
"<section class="container-tip container-tip--terminal" style="background-color:#1f2937;padding:0;margin:18px 0;border-radius:6px;box-shadow:0 2px 8px rgba(0,0,0,0.18)">
<section style="background-color:#2d3748;padding:8px 14px;border-bottom:1px solid #111827;border-radius:6px 6px 0 0;color:#e5e7eb;font-weight:600;font-size:13px;letter-spacing:0.4px"><svg viewBox="0 0 54 14" width="42" height="11" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 10px"><circle cx="7" cy="7" r="5" fill="#ff5f56"></circle><circle cx="22" cy="7" r="5" fill="#ffbd2e"></circle><circle cx="37" cy="7" r="5" fill="#27c93f"></circle></svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:ticket-notch 1`] = `
"<section class="container-tip container-tip--ticket-notch" style="background-color:#eef6ef;border:1px dashed #1f8a4c;border-left:2px dotted #1f8a4c;border-right:2px dotted #1f8a4c;padding:16px 20px;margin:18px 0;border-radius:3px">
<section style="text-align:center;margin-bottom:4px"><svg viewBox="0 0 8 8" width="8" height="8" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin: 0 6px"><circle cx="4" cy="4" r="3" fill="#1f8a4c"></circle></svg><svg viewBox="0 0 8 8" width="8" height="8" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin: 0 6px"><circle cx="4" cy="4" r="3" fill="#1f8a4c"></circle></svg><svg viewBox="0 0 8 8" width="8" height="8" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin: 0 6px"><circle cx="4" cy="4" r="3" fill="#1f8a4c"></circle></svg></section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > admonition:top-bottom-rule 1`] = `
"<section class="container-tip container-tip--top-bottom-rule" style="background-color:#eef6ef;border-top:1px solid #1f8a4c;border-bottom:1px solid #1f8a4c;padding:14px 16px;margin:18px 0">
<section class="container-tip__title" style="font-size:14px;font-weight:600;color:#1f8a4c;margin-bottom:8px;letter-spacing:1.2px"><svg viewBox="0 0 16 16" width="14" height="14" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <circle cx="8" cy="8" r="6" fill="none" stroke="#1f8a4c" stroke-width="1.5"></circle> <circle cx="8" cy="5" r="0.9" fill="#1f8a4c"></circle> <rect x="7.25" y="7" width="1.5" height="5" rx="0.4" fill="#1f8a4c"></rect> </svg>测试标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > compare:column-card 1`] = `
"<section class="container-compare container-compare--column-card" style="display: table; width: 100%; table-layout: fixed; border-spacing: 4px 0; border-collapse: separate; margin: 16px 0;">
<section class="container-pros container-pros--column-card" style="display: table-cell; vertical-align: top; width: 50%; box-sizing: border-box; padding: 8px; background-color: #f5f5f3; border-radius: 6px; font-size: 13px; letter-spacing: 0;">
<section class="container-pros__title" style="font-size:14px;font-weight:700;color:#1f8a4c;margin-bottom:8px;letter-spacing:0;line-height:1.4">正方</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > compare:data-card 1`] = `
"<section class="container-compare container-compare--data-card" style="display: table; width: 100%; table-layout: fixed; border-spacing: 8px 0; border-collapse: separate; margin: 16px 0;">
<section class="container-pros container-pros--column-card" style="display: table-cell; vertical-align: top; width: 50%; box-sizing: border-box; padding: 8px; background-color: #f5f5f3; border-radius: 6px; font-size: 13px; letter-spacing: 0;">
<section class="container-pros__title" style="font-size:14px;font-weight:700;color:#1f8a4c;margin-bottom:8px;letter-spacing:0;line-height:1.4">正方</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > compare:ledger 1`] = `
"<section class="container-compare container-compare--ledger" style="display: table; width: 100%; table-layout: fixed; border-spacing: 0; border-collapse: separate; margin: 16px 0; border: 1px solid #d8d8d4; border-radius: 6px;">
<section class="container-pros container-pros--column-card" style="display: table-cell; vertical-align: top; width: 50%; box-sizing: border-box; padding: 8px; background-color: #f5f5f3; border-radius: 6px; font-size: 13px; letter-spacing: 0;">
<section class="container-pros__title" style="font-size:14px;font-weight:700;color:#1f8a4c;margin-bottom:8px;letter-spacing:0;line-height:1.4">正方</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > compare:stacked-row 1`] = `
"<section class="container-compare container-compare--stacked-row" style="margin: 16px 0;">
<section class="container-pros container-pros--column-card" style="display: table-cell; vertical-align: top; width: 50%; box-sizing: border-box; padding: 8px; background-color: #f5f5f3; border-radius: 6px; font-size: 13px; letter-spacing: 0;">
<section class="container-pros__title" style="font-size:14px;font-weight:700;color:#1f8a4c;margin-bottom:8px;letter-spacing:0;line-height:1.4">正方</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:dots 1`] = `
"<section class="container-divider container-divider--dots" style="text-align:center;margin:24px 0">
<svg viewBox="0 0 240 8" width="220" height="8" xmlns="http://www.w3.org/2000/svg"> <circle cx="96" cy="4" r="2" fill="#d8d8d4"></circle> <circle cx="120" cy="4" r="2" fill="#d8d8d4"></circle> <circle cx="144" cy="4" r="2" fill="#d8d8d4"></circle> </svg>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:flower 1`] = `
"<section class="container-divider container-divider--flower" style="text-align:center;margin:24px 0">
<svg viewBox="0 0 240 10" width="220" height="10" xmlns="http://www.w3.org/2000/svg"> <line x1="0" y1="5" x2="110" y2="5" stroke="#d8d8d4" stroke-width="1"></line> <line x1="130" y1="5" x2="240" y2="5" stroke="#d8d8d4" stroke-width="1"></line> <circle cx="120" cy="5" r="3" fill="#2558b0"></circle> </svg>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:glyph 1`] = `
"<section class="container-divider container-divider--glyph" style="text-align:center;margin:26px 0;color:#2558b0;font-size:18px">
<span style="display:inline-block;width:60px;height:1px;background-color:#d8d8d4;vertical-align:middle;margin-right:12px"></span><span style="display:inline-block;vertical-align:middle">◆</span><span style="display:inline-block;width:60px;height:1px;background-color:#d8d8d4;vertical-align:middle;margin-left:12px"></span>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:rule 1`] = `
"<section class="container-divider container-divider--rule" style="margin:24px 0">
<hr style="margin-top: 24px; margin-bottom: 24px; border: none; height: 1px; background-color: #d8d8d4; margin: 0;">
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:seal-mark 1`] = `
"<section class="container-divider container-divider--seal-mark" style="text-align:right;margin:32px 0 20px">
<span style="display:inline-block;width:12px;height:12px;background-color:#2558b0">&nbsp;</span>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > divider:wave 1`] = `
"<section class="container-divider container-divider--wave" style="text-align:center;margin:24px 0">
<svg viewBox="0 0 240 12" width="220" height="12" xmlns="http://www.w3.org/2000/svg"> <path d="M0,6 Q15,0 30,6 T60,6 T90,6 T120,6 T150,6 T180,6 T210,6 T240,6" fill="none" stroke="#d8d8d4" stroke-width="1.2"></path> </svg>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:classic 1`] = `
"<section class="container-quote-card container-quote-card--classic" style="background-color: #f5f5f3; padding: 18px 16px; margin: 20px 0; border-radius: 8px;">
<span style="display:inline-block;font-size:28px;line-height:1;opacity:0.35;margin-right:4px">「</span>
<section class="container-quote-card__body" style="font-size:16px;line-height:1.7;text-align:center">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:column-rule 1`] = `
"<section class="container-quote-card container-quote-card--column-rule" style="background-color: #f5f5f3; border-radius: 6px; padding: 18px 28px; margin: 22px 12px; border-left: 3px solid #2558b0; border-right: 3px solid #2558b0;">
<section class="container-quote-card__body" style="font-size:16px;line-height:1.85;text-align:center;color:#1c1f24">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:editorial-block 1`] = `
"<section class="container-quote-card container-quote-card--editorial-block" style="border-radius: 6px; background-color: #f5f5f3; padding: 18px 20px; margin: 22px 0; border-left: 6px solid #2558b0;">
<section class="container-quote-card__body" style="font-size:20px;font-weight:700;line-height:1.45;text-align:left;color:#1c1f24;letter-spacing:-0.005em">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:frame-brackets 1`] = `
"<section class="container-quote-card container-quote-card--frame-brackets" style="background-color: #f5f5f3; border-radius: 6px; padding: 26px 22px; margin: 22px 0;">
<svg viewBox="0 0 320 120" width="100%" height="120" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="display: block; margin-bottom: -120px"><path d="M0,20 L0,0 L20,0 M300,0 L320,0 L320,20 M0,100 L0,120 L20,120 M300,120 L320,120 L320,100" stroke="#2558b0" stroke-width="2" fill="none"></path></svg>
<section class="container-quote-card__body" style="font-size:16px;line-height:1.85;text-align:center;color:#1c1f24">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:left-bar 1`] = `
"<section class="container-quote-card container-quote-card--left-bar" style="background-color: #f5f5f3; border-radius: 6px; padding: 10px 0 10px 18px; margin: 20px 0; border-left: 4px solid #1c1f24;">
<section class="container-quote-card__body" style="font-size:18px;line-height:1.7;text-align:left;color:#1c1f24">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:magazine-dropcap 1`] = `
"<section class="container-quote-card container-quote-card--magazine-dropcap" style="border-radius: 6px; background-color: #fdfdfc; padding: 22px 18px; margin: 24px 0; border-top: 3px double #2558b0; border-bottom: 3px double #2558b0;">
<span style="display:inline-block;font-size:48px;line-height:1;color:inherit;opacity:0.25;margin-right:8px;font-style:italic">“</span>
<section class="container-quote-card__body" style="font-size:17px;line-height:1.85;color:#1c1f24">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > quote:tilted-sticker 1`] = `
"<section class="container-quote-card container-quote-card--tilted-sticker" style="background-color: #1c1f24; color: #fefefe; padding: 16px 18px; margin: 24px 0; transform: rotate(-1deg); border-radius: 0;">
<section class="container-quote-card__body" style="font-size:20px;font-weight:700;line-height:1.3;color:#fefefe;text-align:left;letter-spacing:-0.005em">
<p style="font-size: 15px; line-height: 1.75; color: #1c1f24; margin-top: 0; margin-bottom: 18px; letter-spacing: 0.3px;">人生如逆旅，我亦是行人。</p>
</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > sectionTitle:bordered 1`] = `
"<section class="container-section-title container-section-title--bordered" style="margin: 24px 0 12px; padding-bottom: 6px; border-bottom: 2px solid #2558b0;">
<section class="container-section-title__label" style="font-weight:700;font-size:20px;color:#1c1f24"><svg viewBox="0 0 14 14" width="12" height="12" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <path d="M1,1 L13,1 M1,1 L1,13" fill="none" stroke="#2558b0" stroke-width="2" stroke-linecap="square"></path> </svg>章节标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > sectionTitle:cornered 1`] = `
"<section class="container-section-title container-section-title--cornered" style="padding-bottom: 6px; border-bottom: 2px solid #2558b0; margin: 24px 0 12px;">
<section class="container-section-title__label" style="font-weight:700;font-size:20px;color:#1c1f24"><svg viewBox="0 0 14 14" width="12" height="12" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 6px"> <path d="M1,1 L13,1 M1,1 L1,13" fill="none" stroke="#2558b0" stroke-width="2" stroke-linecap="square"></path> </svg>章节标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > sectionTitle:kicker-stack 1`] = `
"<section class="container-section-title container-section-title--kicker-stack" style="padding-bottom: 6px; border-bottom: 2px solid #2558b0; margin: 26px 0 12px; padding: 0;">
<section class="container-section-title__label" style="font-weight:700;font-size:20px;color:#1c1f24;line-height:1.35"><span style="display:block;width:24px;height:2px;background:#2558b0;margin-bottom:8px"></span>章节标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > sectionTitle:number-prefix 1`] = `
"<section class="container-section-title container-section-title--number-prefix" style="padding-bottom: 6px; margin: 28px 0 14px; padding: 0 0 6px; border-bottom: 1px solid #d8d8d4;">
<section class="container-section-title__label" style="font-weight: 700; font-size: 21px; color: #1c1f24; letter-spacing: -0.2px">章节标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > sectionTitle:ribbon-stamp 1`] = `
"<section class="container-section-title container-section-title--ribbon-stamp" style="padding-bottom: 6px; border-bottom: 2px solid #2558b0; margin: 24px 0 12px; padding: 0;">
<section class="container-section-title__label" style="font-weight:700;font-size:20px;color:#1c1f24;vertical-align:middle;line-height:1.4"><span style="display:inline-block;min-width:20px;padding:1px 6px;margin-right:10px;background:#2558b0;color:#fefefe;font-weight:700;font-size:14px;text-align:center;vertical-align:middle">§</span>章节标题</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > steps:number-circle 1`] = `
"<section class="container-steps container-steps--number-circle" style="margin: 16px 0;">
<section class="container-steps__title" style="font-weight:700;margin-bottom:12px">操作步骤</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > steps:ribbon-chain 1`] = `
"<section class="container-steps container-steps--ribbon-chain" style="margin: 18px 0; padding: 8px 0 8px 18px; border-left: 4px solid #2558b0;">
<section class="container-steps__title" style="display:inline-block;padding:4px 12px;background-color:#2558b0;color:#fefefe;border-radius:12px;font-weight:700;font-size:13px;margin:0 0 12px -30px;letter-spacing:0.4px">操作步骤</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > steps:split-row 1`] = `
"<section class="container-steps container-steps--split-row" style="margin: 18px 0; padding: 8px 0 8px 16px; border-left: 4px solid #2558b0; box-shadow: inset 1px 0 0 #d8d8d4;">
<section class="container-steps__title" style="font-weight:700;font-size:14px;color:#636870;text-transform:uppercase;letter-spacing:1px;margin-bottom:8px">操作步骤</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > steps:step-card 1`] = `
"<section class="container-steps container-steps--step-card" style="margin: 18px 0; padding: 14px 0 4px; border-top: 1px solid #d8d8d4;">
<section class="container-steps__title" style="font-weight:700;font-size:14px;color:#636870;letter-spacing:0.5px;text-transform:uppercase;margin-bottom:10px">操作步骤</section>"
`;

exports[`默认主题 · 每 variant 渲染片段快照 > steps:timeline-dot 1`] = `
"<section class="container-steps container-steps--timeline-dot" style="margin: 18px 0; padding: 4px 0 4px 20px; border-left: 2px dotted #2558b0;">
<svg viewBox="0 0 10 10" width="10" height="10" xmlns="http://www.w3.org/2000/svg" style="display: inline-block; vertical-align: middle; margin-right: 8px; margin-left: -16px"><circle cx="5" cy="5" r="4" fill="#2558b0"></circle></svg>
<section class="container-steps__title" style="font-weight:700;color:#2558b0;margin-bottom:10px">操作步骤</section>"
`;
